[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/scenes/Maps/Walls.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/art/monochrome_transparent_packed.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/Enemies/Enemies/Wizard-BEasy.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/Enemies/Enemies/Wizard-Range.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/Items/Enviorement/DetectWeapon.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/Maps/Levels/Lvl7.gd" type="Script" id=6]
[ext_resource path="res://src/scenes/Items/Weapons/Dagger_OneUse.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/scenes/Player/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/scenes/Items/Enviorement/Alter.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/scenes/Enemies/Enemies/Charger.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/scenes/Items/Weapons/RichoWand.tscn" type="PackedScene" id=11]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/monochrome_transparent_packed.png-c682b9369c45008b48311de2a366c9c8.stex"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 72 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 56 )

[node name="Lvl7" type="Node2D"]
script = ExtResource( 6 )

[node name="GrabKey" type="Area2D" parent="."]
position = Vector2( -384, 328 )

[node name="Sprite" type="Sprite" parent="GrabKey"]
texture = SubResource( 1 )
region_enabled = true
region_rect = Rect2( 512, 176, 15, 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabKey"]
shape = SubResource( 2 )

[node name="Alter" parent="." instance=ExtResource( 9 )]
position = Vector2( -312, -352 )

[node name="GrabKey2" type="Area2D" parent="."]
position = Vector2( -312, -384 )

[node name="Sprite" type="Sprite" parent="GrabKey2"]
texture = SubResource( 1 )
region_enabled = true
region_rect = Rect2( 512, 176, 15, 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabKey2"]
shape = SubResource( 2 )

[node name="RichoWand" parent="." instance=ExtResource( 11 )]
position = Vector2( -1008, -120 )

[node name="ExitLvl" type="Area2D" parent="."]
position = Vector2( -1384, -120 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitLvl"]
shape = SubResource( 2 )

[node name="GateExit" type="StaticBody2D" parent="."]
position = Vector2( -520, -120 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GateExit"]
shape = SubResource( 3 )

[node name="Gate1" type="Sprite" parent="GateExit"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Gate4" type="Sprite" parent="GateExit"]
position = Vector2( -6.10352e-05, -32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Gate5" type="Sprite" parent="GateExit"]
position = Vector2( -6.10352e-05, -48 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Gate6" type="Sprite" parent="GateExit"]
position = Vector2( -6.10352e-05, 32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Gate7" type="Sprite" parent="GateExit"]
position = Vector2( -6.10352e-05, 48 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Gate2" type="Sprite" parent="GateExit"]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Gate3" type="Sprite" parent="GateExit"]
position = Vector2( 0, 16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="GateExit2" type="StaticBody2D" parent="."]
position = Vector2( -312, -288 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="GateExit2"]
shape = SubResource( 3 )

[node name="Gate1" type="Sprite" parent="GateExit2"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Gate2" type="Sprite" parent="GateExit2"]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Gate3" type="Sprite" parent="GateExit2"]
position = Vector2( 0, 16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="GateExit3" type="StaticBody2D" parent="."]
position = Vector2( -296, 48 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="GateExit3"]
shape = SubResource( 3 )

[node name="Gate1" type="Sprite" parent="GateExit3"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Gate2" type="Sprite" parent="GateExit3"]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Gate3" type="Sprite" parent="GateExit3"]
position = Vector2( 0, 16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 48, 15, 15 )

[node name="Walls" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -1638433, 32, 0, -1638432, 33, 0, -1638431, 33, 0, -1638430, 33, 0, -1638429, 33, 0, -1638428, 33, 0, -1638427, 33, 0, -1638426, 33, 0, -1638425, 33, 0, -1638424, 33, 0, -1638423, 33, 0, -1638422, 33, 0, -1638421, 33, 0, -1638420, 33, 0, -1638419, 33, 0, -1638418, 33, 0, -1638417, 33, 0, -1638416, 33, 0, -1638415, 33, 0, -1638414, 33, 0, -1638413, 33, 0, -1638412, 33, 0, -1638411, 33, 0, -1638410, 33, 0, -1638409, 33, 0, -1638408, 33, 0, -1638407, 34, 0, -1572897, 39, 0, -1572871, 35, 0, -1507361, 39, 0, -1507335, 35, 0, -1441825, 39, 0, -1441799, 35, 0, -1376289, 39, 0, -1376263, 35, 0, -1310753, 39, 0, -1310727, 35, 0, -1245217, 39, 0, -1245191, 35, 0, -1179681, 39, 0, -1179655, 35, 0, -1114145, 39, 0, -1114144, 33, 0, -1114143, 33, 0, -1114142, 33, 0, -1114141, 33, 0, -1114140, 33, 0, -1114139, 33, 0, -1114138, 33, 0, -1114137, 33, 0, -1114136, 33, 0, -1114135, 33, 0, -1114134, 33, 0, -1114130, 33, 0, -1114129, 33, 0, -1114128, 33, 0, -1114127, 33, 0, -1114126, 33, 0, -1114125, 33, 0, -1114124, 33, 0, -1114123, 33, 0, -1114122, 33, 0, -1114121, 33, 0, -1114120, 33, 0, -1114119, 35, 0, -1048609, 39, 0, -1048583, 35, 0, -983073, 39, 0, -983047, 35, 0, -917537, 39, 0, -917511, 35, 0, -852001, 39, 0, -851975, 35, 0, -786465, 39, 0, -786439, 35, 0, -720995, 33, 0, -720994, 33, 0, -720993, 33, 0, -720992, 33, 0, -720991, 33, 0, -720990, 33, 0, -720989, 33, 0, -720988, 33, 0, -720987, 33, 0, -720986, 33, 0, -720985, 33, 0, -720984, 33, 0, -720983, 33, 0, -720982, 33, 0, -720981, 33, 0, -720980, 33, 0, -720979, 33, 0, -720978, 33, 0, -720977, 33, 0, -720976, 33, 0, -720975, 33, 0, -720974, 33, 0, -720973, 33, 0, -720972, 33, 0, -720971, 33, 0, -720970, 33, 0, -720969, 33, 0, -720968, 33, 0, -720967, 33, 0, -720966, 33, 0, -720965, 33, 0, -720964, 33, 0, -720963, 33, 0, -720962, 33, 0, -720961, 33, 0, -720960, 33, 0, -720959, 33, 0, -720958, 33, 0, -720957, 33, 0, -720956, 33, 0, -720955, 33, 0, -720954, 33, 0, -720953, 33, 0, -720952, 33, 0, -720951, 33, 0, -720950, 33, 0, -720949, 33, 0, -720948, 33, 0, -720947, 33, 0, -720946, 33, 0, -720945, 33, 0, -720944, 33, 0, -720943, 33, 0, -720942, 33, 0, -720941, 33, 0, -720940, 33, 0, -720939, 33, 0, -720938, 33, 0, -720937, 33, 0, -720936, 33, 0, -720935, 33, 0, -720934, 33, 0, -720933, 33, 0, -720932, 33, 0, -720931, 33, 0, -720930, 33, 0, -720929, 39, 0, -720903, 35, 0, -655367, 35, 0, -589831, 35, 0, -524295, 35, 0, -458759, 35, 0, -393223, 35, 0, -327687, 35, 0, -262150, 33, 0, -262149, 33, 0, -262148, 33, 0, -262147, 33, 0, -262146, 33, 0, -262145, 33, 0, -327680, 33, 0, -327679, 33, 0, -327678, 33, 0, -327677, 33, 0, -327676, 34, 0, -196707, 37, 0, -196706, 37, 0, -196705, 37, 0, -196704, 37, 0, -196703, 37, 0, -196702, 37, 0, -196701, 37, 0, -196700, 37, 0, -196699, 37, 0, -196698, 37, 0, -196697, 37, 0, -196696, 37, 0, -196695, 37, 0, -196694, 37, 0, -196693, 37, 0, -196692, 37, 0, -196691, 37, 0, -196690, 37, 0, -196689, 37, 0, -196688, 37, 0, -196687, 37, 0, -196686, 37, 0, -196685, 37, 0, -196684, 37, 0, -196683, 37, 0, -196682, 37, 0, -196681, 37, 0, -196680, 37, 0, -196679, 37, 0, -196678, 37, 0, -196677, 37, 0, -196676, 37, 0, -196675, 37, 0, -196674, 37, 0, -196673, 37, 0, -196672, 37, 0, -196671, 37, 0, -196670, 37, 0, -196669, 37, 0, -196668, 37, 0, -196667, 37, 0, -196666, 37, 0, -196665, 37, 0, -196664, 37, 0, -196663, 37, 0, -196662, 37, 0, -196661, 37, 0, -196660, 37, 0, -196659, 37, 0, -196658, 37, 0, -196657, 37, 0, -196656, 37, 0, -196655, 37, 0, -196654, 37, 0, -196653, 37, 0, -196652, 37, 0, -196651, 37, 0, -196650, 37, 0, -196649, 37, 0, -196648, 37, 0, -196647, 37, 0, -196646, 37, 0, -196645, 37, 0, -196644, 37, 0, -196643, 37, 0, -196642, 37, 0, -196641, 39, 0, -262140, 30, 0, -131105, 39, 0, -196604, 30, 0, -65569, 39, 0, -131068, 30, 0, -33, 39, 0, -65532, 30, 0, 65503, 39, 0, 4, 30, 0, 131039, 39, 0, 131066, 37, 0, 131067, 37, 0, 131068, 37, 0, 131069, 37, 0, 131070, 37, 0, 131071, 37, 0, 65536, 37, 0, 65537, 37, 0, 65538, 37, 0, 65539, 37, 0, 65540, 36, 0, 196575, 39, 0, 196602, 35, 0, 262111, 39, 0, 262112, 33, 0, 262113, 33, 0, 262114, 33, 0, 262115, 33, 0, 262116, 33, 0, 262117, 33, 0, 262118, 33, 0, 262119, 33, 0, 262120, 33, 0, 262121, 33, 0, 262122, 33, 0, 262123, 33, 0, 262127, 33, 0, 262128, 33, 0, 262129, 33, 0, 262130, 33, 0, 262131, 33, 0, 262132, 33, 0, 262133, 33, 0, 262134, 33, 0, 262135, 33, 0, 262136, 33, 0, 262137, 33, 0, 262138, 35, 0, 327647, 39, 0, 327674, 35, 0, 393183, 39, 0, 393210, 35, 0, 458719, 39, 0, 458746, 35, 0, 524255, 39, 0, 524282, 35, 0, 589791, 39, 0, 589818, 35, 0, 655327, 39, 0, 655354, 35, 0, 720863, 39, 0, 720890, 35, 0, 786399, 39, 0, 786426, 35, 0, 851935, 39, 0, 851962, 35, 0, 917471, 39, 0, 917498, 35, 0, 983007, 39, 0, 983034, 35, 0, 1048543, 39, 0, 1048570, 35, 0, 1114079, 39, 0, 1114106, 35, 0, 1179615, 39, 0, 1179642, 35, 0, 1245151, 39, 0, 1245178, 35, 0, 1310687, 39, 0, 1310714, 35, 0, 1376223, 39, 0, 1376250, 35, 0, 1441759, 39, 0, 1441786, 35, 0, 1507295, 39, 0, 1507322, 35, 0, 1572831, 39, 0, 1572858, 35, 0, 1638367, 39, 0, 1638394, 35, 0, 1703903, 39, 0, 1703930, 35, 0, 1769439, 39, 0, 1769466, 35, 0, 1834975, 39, 0, 1835002, 35, 0, 1900511, 39, 0, 1900538, 35, 0, 1966047, 38, 0, 1966048, 37, 0, 1966049, 37, 0, 1966050, 37, 0, 1966051, 37, 0, 1966052, 37, 0, 1966053, 37, 0, 1966054, 37, 0, 1966055, 37, 0, 1966056, 37, 0, 1966057, 37, 0, 1966058, 37, 0, 1966059, 37, 0, 1966060, 37, 0, 1966061, 37, 0, 1966062, 37, 0, 1966063, 37, 0, 1966064, 37, 0, 1966065, 37, 0, 1966066, 37, 0, 1966067, 37, 0, 1966068, 37, 0, 1966069, 37, 0, 1966070, 37, 0, 1966071, 37, 0, 1966072, 37, 0, 1966073, 37, 0 )

[node name="Dagger_OneUse" parent="." instance=ExtResource( 7 )]
position = Vector2( -272, -312 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Wizard-BEasy" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -496, 136 )

[node name="Wizard-BEasy2" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -440, 256 )

[node name="Wizard-BEasy3" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -384, 328 )

[node name="Wizard-BEasy4" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -320, 392 )

[node name="Wizard-Range" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( -152, 96 )

[node name="Wizard-Range2" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( -152, 440 )

[node name="Wizard-Range3" parent="Enemies" instance=ExtResource( 4 )]
position = Vector2( -240, 288 )

[node name="Charger" parent="Enemies" instance=ExtResource( 10 )]
position = Vector2( -1040, -144 )

[node name="Charger2" parent="Enemies" instance=ExtResource( 10 )]
position = Vector2( -1088, -88 )

[node name="DetectWeapon" parent="." instance=ExtResource( 5 )]
position = Vector2( -312, -312 )

[node name="Player" parent="." instance=ExtResource( 8 )]
[connection signal="body_entered" from="GrabKey" to="." method="_on_GrabKey_body_entered"]
[connection signal="body_entered" from="GrabKey2" to="." method="_on_GrabKey2_body_entered"]
[connection signal="body_entered" from="ExitLvl" to="." method="_on_ExitLvl_body_entered"]
[connection signal="area_entered" from="DetectWeapon" to="." method="_on_DetectWeapon_area_entered"]
